2008-08-30  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR libfortran/36895
	* io/write.c (namelist_write_newline): New function to correctly mark
	next records in both external and internal units.
	(nml_write_obj): Use new function.
	(namelist_write: Use new function.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@139813 138bc75d-0d04-0410-961f-82ee72b054a4